<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/pp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/canera"
        android:contentDescription="@string/camera"
        app:layout_constraintBottom_toBottomOf="@id/picture"
        app:layout_constraintEnd_toEndOf="@id/picture" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/picture"
        app:layout_constraintTop_toTopOf="@id/picture"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="32dp"
        android:alpha="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/picture"
        app:layout_constraintTop_toBottomOf="@+id/label_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="248dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/user"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/city"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEditTextLayout"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/mail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEditTextLayout"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:alpha="1.0"
        android:backgroundTint="@color/blue"
        android:text="@string/save1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditTextLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>